flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -210,7 +210,6 @@
     }
     &.items-6{
       width: $submenu_item_width * 5;
-      left: -$submenu_item_width;
       .sub_menu-item{
         width: $submenu_item_width - 40px;
       }
